--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "xlocmon": "cpp",
     "xlocnum": "cpp",
     "xloctime": "cpp",
-    "system_error": "cpp"
+    "system_error": "cpp",
+    "vector": "cpp",
+    "utility": "cpp"
   }
 }
